<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="droid_hunter">Droid Hunter</string>
    <string name="droid_number_hint">Number of droids</string>
    <string name="android_model">Android Model</string>
    <string name="title_settings">Settings</string>
    <string name="title_error_dialog">Error</string>
    <string name="message_time_limit_error">Invalid number of droids or time limit. Time limit must be in the form mm:ss and cannot exceed 59:59</string>
    <string name="label_ok">OK</string>
    <string name="label_level_1">Level 1</string>
    <string name="label_level_2">Level 2</string>
    <string name="label_level_3">Level 3</string>
    <string name="label_level_4">Level 4</string>
    <string name="label_level_5">Level 5</string>
    <string name="label_level_6">Level 6</string>
    <string name="label_level_7">Level 7</string>
    <string name="label_level_8">Level 8</string>
    <string name="label_level_9">Level 9</string>
    <string name="label_level_10">Level 10</string>
    <string name="label_level_11">Level 11</string>
    <string name="label_level_12">Level 12</string>
    <string name="label_level_13">Level 13</string>
    <string name="label_level_14">Level 14</string>
    <string name="label_level_15">Level 15</string>
    <string name="label_level_16">Level 16</string>
    <string name="label_level_17">Level 17</string>
    <string name="label_level_18">Level 18</string>
    <string name="label_level_19">Level 19</string>
    <string name="label_level_20">Level 20</string>
    <string name="label_mode">Game Mode</string>
    <string name="label_model">Droid Model</string>
    <string name="label_droids">Droids</string>
    <string name="label_time_limit">Time Limit</string>
    <string name="label_time">Time:</string>
    <string name="label_hit">Hit:</string>
    <string name="label_sound_mode">Sound</string>
    <string name="label_weapon">Weapon Sound</string>
    <string name="label_difficulty_level">Difficulty Level</string>
    <string name="label_save">Save</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ready">Ready</string>
    <string name="prefs_droid_model_key">DroidHunter.droidModel</string>
    <string name="prefs_game_mode_key">DroidHunter.gameMode</string>
    <string name="prefs_droid_number_key">DroidHunter.droidNumber</string>
    <string name="prefs_time_limit_key">DroidHunter.timeLimit</string>
    <string name="prefs_sound_mode_key">DroidHunter.soundMode</string>
    <string name="prefs_weapon_sound_key">DroidHunter.weaponSound</string>
    <string name="prefs_difficulty_level_key">DroidHunter.difficultyLevel</string>
    <string name="prefs_time_limit_default">00:30</string>
    <string name="time_limit_hint">mm:ss</string>
    <string name="time_reset">00:00</string>
    <string name="time_separator">:</string>
    <string name="message_failed">Better luck next time!</string>
    <string name="message_success">Congratulations! You saved the universe!</string>
    <string name="title_about">About Droid Hunter</string>
    <string name="message_about">Droid Hunter\nPasquaSoft L.L.C.\nCopyright© 2010–2021\nImages by Aha-Soft\nhttp://www.aha-soft.com</string>
    <string name="mode_single">Single</string>
    <string name="mode_multilevel">Multilevel</string>
    <string name="sound_on">On</string>
    <string name="sound_off">Off</string>
    <string name="weapon_cannon">Cannon</string>
    <string name="weapon_phaser">Phaser</string>
    <string name="weapon_laser">Laser</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_ridiculous">Ridiculous</string>
    <string name="droid_android">Android</string>
    <string name="droid_armed">Armed</string>
    <string name="droid_atomic">Atomic</string>
    <string name="droid_blue">Blue</string>
    <string name="droid_classic">Classic</string>
    <string name="droid_crawler">Crawler</string>
    <string name="droid_dancing">Dancing</string>
    <string name="droid_dog">Dog</string>
    <string name="droid_flying">Flying</string>
    <string name="droid_happy">Happy</string>
    <string name="droid_insect">Insect</string>
    <string name="droid_iron">Iron</string>
    <string name="droid_little">Little</string>
    <string name="droid_military">Military</string>
    <string name="droid_paranoid">Paranoid</string>
    <string name="droid_sad">Sad</string>
    <string name="label_new_game">New Game</string>
    <string name="label_settings">Settings</string>
    <string name="label_about">About</string>
    <string name="label_how_to">How To Play</string>
    <string name="spinner_prompt_model">Choose droid model</string>
    <string name="spinner_prompt_mode">Choose game mode</string>
    <string name="spinner_prompt_sound_mode">Choose sound mode</string>
    <string name="spinner_prompt_weapon">Choose weapon sound</string>
    <string name="spinner_prompt_difficulty">Choose difficulty level</string>
    <string name="message_how_to">Touch the droids to destroy them in the allotted time. Apply game settings including droid model, game mode, number of droids, time limit, difficulty level and weapon sound.</string>
    <string name="menu_resume">Resume</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_sound_off">Sound Off</string>
    <string name="menu_sound_on">Sound On</string>
</resources>
