<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="5dip"
    android:paddingEnd="5dip"
    android:scrollbarStyle="insideInset">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="3dip"
            android:paddingEnd="3dip"
            android:text="@string/label_model"
            android:textColor="#0277BD"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/droidModel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:prompt="@string/spinner_prompt_model" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="3dip"
            android:paddingEnd="3dip"
            android:text="@string/label_mode"
            android:textColor="#0277BD"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/gameMode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:prompt="@string/spinner_prompt_mode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="3dip"
            android:paddingEnd="3dip"
            android:text="@string/label_sound_mode"
            android:textColor="#0277BD"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/soundMode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:prompt="@string/spinner_prompt_sound_mode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="3dip"
            android:paddingEnd="3dip"
            android:text="@string/label_weapon"
            android:textColor="#0277BD"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/weaponSound"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:prompt="@string/spinner_prompt_weapon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="3dip"
            android:paddingEnd="3dip"
            android:text="@string/label_difficulty_level"
            android:textColor="#0277BD"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/difficultyLevel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:prompt="@string/spinner_prompt_difficulty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/droids"
            android:paddingStart="3dip"
            android:paddingEnd="3dip"
            android:text="@string/label_droids"
            android:textColor="#0277BD"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/droids"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="2"
            android:minHeight="48dp"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/timeLimit"
            android:paddingStart="3dip"
            android:paddingEnd="3dip"
            android:text="@string/label_time_limit"
            android:textColor="#0277BD"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/timeLimit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="time"
            android:minHeight="48dp"
            android:hint="@string/hint_mm_ss"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center_horizontal"
            android:paddingTop="4dip">

            <Button
                android:id="@+id/cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/label_cancel"
                android:textColor="#004D40" />


            <Button
                android:id="@+id/save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="120dip"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/label_save"
                android:textColor="#004D40" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
